...
    <string name="yesterday">Yesterday</string>

    <!--
    Used in the weather preferences to indicate weather information
    should be displayed in the metric system. Used in combo-boxes
     -->
    <string name="metric">Metric</string>

    <!--
    Used in the weather preferences to indicate weather information
    should be displayed in the imperial system. Used in combo-boxes
     -->
    <string name="imperial">Imperial</string>

    <!--
    Name of the unit to use for kilometers per hour. Used in the
    Weather widgets on the home page.
    -->
    <string name="speed_kph">km/h</string>
...
    <string name="appsi_sms_plugin">SMS plugin</string>
    <string name="appsi_settings_plugin">Settings plugin</string>
    <string name="appsi_contacts_plugin">Contacts plugin</string>
    <string name="appsi_powerpack_plugin">Powerpack plugin</string>
    <string name="theme">Theme</string>
    <string name="weather">Weather</string>
    <string name="weather_location">Location</string>
    <string name="weather_options_header">Weather options</string>
    <string name="weather_unit">Unit</string>
    <string name="weather_auto_location">Use local weather</string>
    <string name="weather_auto_location_summary">Based on the location you are at</string>
    <string name="unknown">Unknown</string>
    <string name="untitled">No title</string>
    <string name="settings">Settings</string>
    <string name="no_bluetooth">No Bluetooth</string>
    <string name="enabled">Enabled</string>
...
    <string name="tap_to_keep_open">Closing, tap to cancel</string>
    <string name="no_compatible_calendar_app">No compatible calendar app found</string>
    <string name="widget_action_always_close_text">Would you like to keep Appsii open after you perform this action in the future?</string>
    <string name="never_close">Keep open</string>
    <string name="close">Close</string>
    <string name="error_loading_widget">Error loading widget</string>
    <string name="cant_access_location">Could not determine your location. Location is used to get local weather information. Enable location services?</string>
    <string name="location_permission_denied">Appsii does not have permission to access your location. Would you like to grant Appsii access to your location?</string>
    <string name="configure">Enable location access</string>
    <string name="nope">Nope</string>
    <string name="shell_command">Shell command</string>
    <string name="edit_app_launcher_title">App-launcher</string>
    <string name="choose_contact">Choose contact</string>
    <string name="theme_colors">Theme colors</string>
...
