<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2015. Appsi Mobile
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    android:id="@+id/location_search"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:minHeight="?android:listPreferredItemHeight"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/appsiDividerColor"
        />

    <TextView
        android:id="@+id/location_title"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/cant_access_location"
        />

    <Button
        android:id="@+id/enable_location_button"
        style="@style/PrimaryColorButtonBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/location_title"
        android:layout_marginBottom="8dp"
        android:text="@string/enable"
        />

    <Button
        android:id="@+id/cancel_enable_location_button"
        style="@style/PrimaryColorButtonBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_title"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@id/enable_location_button"
        android:text="@string/nope"
        />


</RelativeLayout>