...
        android:background="@android:color/white"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <include
        android:id="@+id/location_unavailable"
        layout="@layout/include_location_unavailable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:visibility="gone"
        tools:visibility="visible"
...
